# UR5_TrajOpt

./: .gitignore  .gitmodules  .rosinstall  .rosinstall.bak  Dockerfile  README.md  robot_ur5.urdf
data/: settings.txt
host_ws/src/ur5_husky_main/: CMakeLists.txt
scripts/docker/: run_armbot_docker.sh
src/: .rosinstall
src/UR5/ur5_settings/: CMakeLists.txt  package.xml
src/UR5/ur5_single_arm_manipulation/: CMakeLists.txt  package.xml
src/libs/tesseract_ros/tesseract_ros_examples/: CMakeLists.txt  package.xml
src/libs/tesseract_ros/tesseract_ros_examples/config/: examples.rviz
src/libs/tesseract_ros/tesseract_ros_examples/src/: ur5_trajopt_node.cpp
src/libs_pkgs_ur5/: README.md
src/libs_pkgs_ur5/ur5_single_arm_manipulation/: CMakeLists.txt
src/libs_trajopt/: .rosinstall
src/pkgs_ur5/ur5_single_arm_manipulation/: CMakeLists.txt  package.xml
src/robot_context/: CMakeLists.txt  package.xml
src/robot_context/include/robot_context/: TestSingleton.hpp  singleton.hpp  ur_rtde_interface.hpp
src/robot_context/src/: robot_context.cpp  ur_rtde_interface.cpp
src/settings/: CMakeLists.txt  package.xml
src/settings/src/: settings.cpp
src/settings_custom_lib/: CMakeLists.txt  package.xml
src/settings_custom_lib/src/: settings_custom_lib.cpp
src/ur5_husky_api/: readme.md
src/ur5_husky_api/camera_pub/: CMakeLists.txt  package.xml
src/ur5_husky_api/gripper_move/: CMakeLists.txt  package.xml
src/ur5_husky_api/pkgs_for_datasets/: readme.md
src/ur5_husky_api/tf_pub/: CMakeLists.txt  package.xml
src/ur5_husky_api/ur5_info/: CMakeLists.txt  package.xml
src/ur5_husky_camera/: CMakeLists.txt  package.xml
src/ur5_husky_camera/launch/: camera.launch
src/ur5_husky_camera/scripts/: camera.py
src/ur5_husky_main/: CMakeLists.txt  package.xml
src/ur5_husky_main/config/: arm_controller_ur5.yaml  default_robot_calibration.yaml  robot_calibration.yaml  ur5_trajopt_plan_plugins.yaml
src/ur5_husky_main/ik/: InverseKinematics.cpp  InverseKinematics.hpp  InverseKinematicsUR5.cpp  InverseKinematicsUR5.hpp  KinematicsUR5.cpp  KinematicsUR5.hpp  TestIK.cpp  TestIK.hpp
src/ur5_husky_main/launch/: freedrive_node.launch  gripper.launch  robot_control.launch  robot_load_ur5.launch  run_ur5_husky_trajopt.launch  sample_subscriber.launch  spawn_robot.launch  ur5_husky_trajopt.launch  (+1 more)
src/ur5_husky_scene/: CMakeLists.txt  package.xml
src/ur_rtde_interface/: CMakeLists.txt  package.xml
(+150 files in other folders)
